--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.inputsystem": "1.13.1",
+    "com.unity.memoryprofiler": "1.1.6",
     "com.unity.render-pipelines.universal": "17.0.3",
     "com.unity.test-framework": "1.4.6",
     "com.unity.ugui": "2.0.0",
